<resources>
    <string name="app_name">Smart Room</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chart">Chart</string>
    <string name="title_power">Power</string>
    <string name="title_account">Account</string>
    <string name="control">Control</string>
    <string name="dumy_date">0000-00-00</string>
    <string name="dumy_clock">00:00 AM</string>
    <string name="temperature">Temperature</string>
    <string name="dumy_tmp">-</string>
    <string name="c">C</string>
    <string name="humidity">Humidity</string>
    <string name="dumy_hum">-</string>
    <string name="ac">AC</string>
    <string name="lamp">Lamp</string>
    <string name="lamp_1">Lamp 1</string>
    <string name="lamp_2">Lamp 2</string>
    <string name="lamp_3">Lamp 3</string>
    <string name="lamp_4">Lamp 4</string>
    <string name="door">Door</string>
    <string name="open">Open</string>
    <string name="des">TODO</string>
    <string name="on">ON</string>
    <string name="number_id_card">Number ID Card</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="edit_user">Edit User</string>
    <string name="dumy_number">1</string>
    <string name="dumy_name">Ahmad Marzuky</string>
    <string name="dumy_id">3A458909</string>
    <string name="user">User</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="action">Action</string>
    <string name="no">No</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="device_code">Device Code</string>
    <string name="input_your_code">Input Your Code :</string>
    <string name="change_device_code">Change Device Code</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">Smart Room</string>
    <string name="tv_fan">FAN</string>
    <string name="fan">FAN</string>
    <string name="t_fan">Fan</string>
</resources>