<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_power">

    <fragment
        android:id="@+id/navigation_chart"
        android:name="skripsi.uki.smartroom.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/chart_fragment" />

    <fragment
        android:id="@+id/navigation_power"
        android:name="skripsi.uki.smartroom.ui.power.PowerFragment"
        android:label="@string/title_power"
        tools:layout="@layout/power_fragment" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="skripsi.uki.smartroom.ui.account.admin.AdminFragment"
        android:label="@string/title_account"
        tools:layout="@layout/admin_fragment" />
</navigation>