<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ui.account.admin.EditUserActivity">

    <TextView
        android:id="@+id/tv_changepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="174dp"
        android:text="@string/change_password"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edt_old_password"
        android:layout_width="match_parent"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/form"
        android:elevation="2dp"
        android:hint="@string/old_password"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_changepassword"/>

    <EditText
        android:id="@+id/edt_new_password"
        android:layout_width="match_parent"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/form"
        android:elevation="2dp"
        android:hint="@string/new_password"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_old_password"/>

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="match_parent"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/form"
        android:elevation="2dp"
        android:hint="@string/confirm_password"
        android:inputType="text"
        android:paddingLeft="15dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_new_password"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_submit_cp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="40dp"
        android:background="@drawable/btn_yellow"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>