<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.admin.AddUserActivity">

    <TextView
        android:id="@+id/tv_addUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="174dp"
        android:text="Add User"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/form"
        android:paddingLeft="15dp"
        android:hint="@string/name"
        android:inputType="text"
        android:singleLine="true"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_addUser" />

    <EditText
        android:id="@+id/add_card"
        android:layout_width="match_parent"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/form"
        android:paddingLeft="15dp"
        android:elevation="2dp"
        android:hint="@string/number_id_card"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_name" />

    <EditText
        android:id="@+id/add_email"
        android:layout_width="match_parent"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/form"
        android:paddingLeft="15dp"
        android:elevation="2dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_card" />

    <EditText
        android:id="@+id/add_password"
        android:layout_width="match_parent"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/form"
        android:paddingLeft="15dp"
        android:elevation="2dp"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_email" />

    <Button
        android:id="@+id/btn_add_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="40dp"
        android:background="@drawable/btn_blue"
        android:textColor="#FFFFFF"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_password"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>